make sidebar visible by default, in a responsive way (1260px or smaller still have the default collapsed) fix #1

--- a/public/css/addon.css
+++ b/public/css/addon.css
@@ -58,3 +58,13 @@
   float: right;
   margin-left: 10px;
 }
+@media (min-width: 1260px) {
+  .sidebar {
+    visibility: visible;
+    left: 0;
+    z-index: 2;
+  }
+  .sidebar-toggle {
+    visibility: hidden;
+  }
+}
